NARA Bionic Beaver config file

--- a/Vertical/conky_carelli_Doc.conf
+++ b/Vertical/conky_carelli_Doc.conf
@@ -1,6 +1,6 @@
 conky.config = {
 -- -- Conky settings -- #
-	background = true,
+	background = false,
 	update_interval = 1,
 
 	cpu_avg_samples = 2,
@@ -16,20 +16,20 @@ conky.config = {
 
 -- -- Window specifications -- #
 	own_window = true,
-	own_window_type = 'panel',
-	own_window_argb_visual = true,
-	own_window_argb_value = 120,
+	own_window_type = 'desktop',
+	own_window_argb_visual = false,
+	own_window_argb_value = 255,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+	own_window_transparent = true,
 	own_window_colour = '#000000',
-
-	minimum_width = 400,
-	minimum_height = 699,
+		minimum_width = 400,
+	minimum_height = 1000,
 
 	border_inner_margin = 10,
-	border_outer_margin = 0,
-	alignment = 'middle_right',
---	gap_x = 50,
-	gap_y = 0,
+	border_outer_margin = 10,
+	alignment = 'top_right',
+	gap_x = 10,
+	gap_y = 10,
 
 -- -- Graphics settings -- #
 	draw_shades = false,
@@ -41,42 +41,52 @@ conky.config = {
 	xinerama_head = 2,
 
 -- -- Text settings -- #
--- Ícones: ${font Conky Icons by Carelli:size=14}
+-- Icons: ${font Conky Icons by Carelli:size=14}
 	use_xft = true,
 	font = 'Ubuntu Mono:size=12',
 	xftalpha = 0.8,
 	uppercase = false,
-	default_color = '#FFFFFF',
+	default_color = '#000000',
 --	format_human_readable = true,
 };
 
 conky.text = [[
-${color #000000}${font Conky Icons by Carelli:size=30}ƃ ${color}${font Conky Icons by Carelli:size=14}ǒ${font}${uptime}
+${color #000000}${font Conky Icons by Carelli:size=30}ƃ ${color}${font Conky Icons by Carelli:size=14}ǒ${font}${uptime}${voffset -5.5} ${color #000000}${font Conky Icons by Carelli:size=14}o${color}${font}${time %a %d/%m/%Y %H:%M}
+
 ${hr 2}
 ${font}${distribution} - ${kernel}
+${hr 2}
+${color #000000}Los Angeles: ${tztime America/Los_Angeles %H:%M}  ${color #000000}Amsterdam: ${tztime Europe/Amsterdam %H:%M}  ${color #000000}Washington: ${tztime US/Eastern %H:%M}
 
-${color #f8df58}${font Conky Icons by Carelli:size=14}E${goto 85}${font}WLAN${goto 225}${font}ETH${color}
-${goto 50}${font Conky Icons by Carelli:size=14}Ƃ ${font}${goto 85}${upspeed wlo1}${goto 225}${upspeed enp37s0}
-${goto 50}${font Conky Icons by Carelli:size=14}Ɓ ${font}${goto 85}${downspeed wlo1}${goto 225}${downspeed enp37s0}
-${goto 50}${font Conky Icons by Carelli:size=14}h ${font}${goto 85}${addrs wlo1}${goto 225}${addrs enp37s0}
-${goto 50}${font Conky Icons by Carelli:size=14}Ǘ ${font}${goto 85}${wireless_essid wlo1} : ${wireless_link_qual wlo1}%
-${color #f8df58}${font Conky Icons by Carelli:size=14}i ${font}${execi 60 sh ~/Dados/Downloads/Temas/Conky/Conky_Git/wanip.sh}${color}
+${color #f8df58}${font Conky Icons by Carelli:size=14}E${goto 85}${font}ETH${color}
+${goto 50}${font Conky Icons by Carelli:size=14}Ƃ ${font}${goto 85}${upspeed eth1}
+${goto 50}${font Conky Icons by Carelli:size=14}Ɓ ${font}${goto 85}${downspeed eth1}
+${goto 50}${font Conky Icons by Carelli:size=14}h ${font}${goto 85}${addrs eth1}
 
-${color #f8df58}${font Conky Icons by Carelli:size=14}ň ${font}DRIVERS${color}
-${goto 50}${font Conky Icons by Carelli:size=14}ǘ ${font}${goto 85}sda: ${hddtemp /dev/sda} ºC sdb: ${hddtemp /dev/sdb} ºC
-${goto 50}${font Conky Icons by Carelli:size=14}Ǒ ${font}${goto 85}sda:${goto 140}${fs_bar 7,75 /}${goto 225}${fs_free_perc /}%
-${goto 50}${font Conky Icons by Carelli:size=14}M ${font}${goto 85}sdb:${goto 140}${fs_bar 7,75 /mnt/Dados}${goto 225}${fs_free_perc /mnt/Dados}%
-${goto 50}Reading sda: ${diskio_read /dev/sda}${goto 225} Writing sda: ${diskio_write /dev/sda}
-${goto 50}${diskiograph_read /dev/sda 20,80 2216e1 2216e1}${goto 225}${diskiograph_write /dev/sda 20,80 DD3A21 DD3A21}
-${goto 50}Reading sdb: ${diskio_read /dev/sdb}${goto 225} Writing sdb: ${diskio_write /dev/sdb}
-${goto 50}${diskiograph_read /dev/sdb 20,80 2216e1 2216e1}${goto 225}${diskiograph_write /dev/sdb 20,80 DD3A21 DD3A21}
+${color #f8df58}${font Conky Icons by Carelli:size=14}ň ${font}DRIVES${color}
+${goto 50}${font Conky Icons by Carelli:size=14}ǘ ${font}${goto 85}ROOT: ${execi 300 nc localhost 7634 | cut -c31-32 ;} ºC ALAYA: ${execi 300 nc localhost 7634 | cut -c109-110 ;} ºC INDAR: ${execi 300 nc localhost 7634 | cut -c70-71 ;} ºC
+${goto 50}${font Conky Icons by Carelli:size=14}Ǒ ${font}${goto 85}ROOT:${goto 160}${fs_bar 7,75 /}${goto 240}${fs_free_perc /}%
+${if_mounted /media/ktavabi/ALAYA}${font}${goto 85}ALAYA:${goto 160}${fs_bar 7,75 /media/ktavabi/ALAYA}${goto 245}${fs_free_perc /}%$else$endif
+${if_mounted /media/ktavabi/INDAR}${font}${goto 85}INDAR:${goto 160}${fs_bar 7,75 /media/ktavabi/INDAR}${goto 245}${fs_free_perc /}%$else$endif
+${if_mounted /media/ktavabi/SEA2T}${font}${goto 85}SEA2T:${goto 160}${fs_bar 7,75 /media/ktavabi/SEA2T}${goto 245}${fs_free_perc /}%$else$endif
+${goto 50}${font Conky Icons by Carelli:size=14}N ${font}${goto 85}Reading: ${diskio_read /dev/sda1}${goto 225} Writing: ${diskio_write /dev/sda1}
+${goto 50}${diskiograph_read /dev/sda1 20,80 2216e1 2216e1}${goto 225}${diskiograph_write /dev/sda1 20,80 DD3A21 DD3A21}
 
-${color #f8df58}${font Conky Icons by Carelli:size=14}Ŵ ${font}CPU${voffset -5.5}${goto 225}${font Conky Icons by Carelli:size=14}B ${font}MEMORIES${color}${font}
-${goto 50}${cpu cpu0}%${goto 92}${cpubar 7,80 cpu0}${goto 225}RAM:${goto 268}$memperc%${goto 302}${membar 7,80}
-${goto 50}${cpu cpu1}%${goto 92}${cpubar 7,80 cpu1}${goto 225}SWAP:${goto 268}$swapperc%${goto 302}${swapbar 7,80}
-${goto 50}${cpu cpu2}%${goto 92}${cpubar 7,80 cpu2}
-${goto 50}${cpu cpu3}%${goto 92}${cpubar 7,80 cpu3}
+${color #f8df58}${font Conky Icons by Carelli:size=14}B ${font}MEMORY${color}${font}
+${goto 85}RAM:${goto 128}$memperc%${goto 164}${membar 7,80}
+${goto 85}SWAP:${goto 128}$swapperc%${goto 164}${swapbar 7,80}
 
+${color #f8df58}${font Conky Icons by Carelli:size=14}A ${font}CPUS${voffset -5.5}
+${color #000000}
+${goto 50}${cpu cpu0}%${goto 75}${cpubar 7,80 cpu0}${goto 180}${cpu cpu8}%${goto 205}${cpubar 7,80 cpu4}${goto 310}${cpu cpu16}%${goto 335}${cpubar 7,80 cpu16}
+${goto 50}${cpu cpu1}%${goto 75}${cpubar 7,80 cpu1}${goto 180}${cpu cpu9}%${goto 205}${cpubar 7,80 cpu5}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu17}
+${goto 50}${cpu cpu2}%${goto 75}${cpubar 7,80 cpu2}${goto 180}${cpu cpu10}%${goto 205}${cpubar 7,80 cpu10}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu18}
+${goto 50}${cpu cpu3}%${goto 75}${cpubar 7,80 cpu3}${goto 180}${cpu cpu11}%${goto 205}${cpubar 7,80 cpu11}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu19}
+${goto 50}${cpu cpu4}%${goto 75}${cpubar 7,80 cpu4}${goto 180}${cpu cpu12}%${goto 205}${cpubar 7,80 cpu12}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu20}
+${goto 50}${cpu cpu5}%${goto 75}${cpubar 7,80 cpu5}${goto 180}${cpu cpu13}%${goto 205}${cpubar 7,80 cpu13}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu21}
+${goto 50}${cpu cpu6}%${goto 75}${cpubar 7,80 cpu6}${goto 180}${cpu cpu14}%${goto 205}${cpubar 7,80 cpu14}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu22}
+${goto 50}${cpu cpu7}%${goto 75}${cpubar 7,80 cpu7}${goto 180}${cpu cpu15}%${goto 205}${cpubar 7,80 cpu15}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu23}
+${color}
 ${color #f8df58}${font Conky Icons by Carelli:size=14}Ŷ ${font}PROCESSES
 ${goto 40}Name ${goto 170}PID${goto 225}CPU${goto 280}MEM${color}
 ${goto 40}${top name 1} ${goto 170}${top pid 1}${goto 225}${top cpu 1}${goto 280}${top mem 1}
@@ -84,4 +94,5 @@ ${goto 40}${top name 2} ${goto 170}${top pid 2}${goto 225}${top cpu 2}${goto 280
 ${goto 40}${top name 3} ${goto 170}${top pid 3}${goto 225}${top cpu 3}${goto 280}${top mem 3}
 ${goto 40}${top name 4} ${goto 170}${top pid 4}${goto 225}${top cpu 4}${goto 280}${top mem 4}
 ${goto 40}${top name 5} ${goto 170}${top pid 5}${goto 225}${top cpu 5}${goto 280}${top mem 5}
+${hr 2}
 ]];
