--- a/Vertical/conky_carelli_Doc.conf
+++ b/Vertical/conky_carelli_Doc.conf
@@ -16,7 +16,7 @@ conky.config = {
 
 -- -- Window specifications -- #
 	own_window = true,
-	own_window_type = 'desktop',
+	own_window_type = 'override',
 	own_window_argb_visual = false,
 	own_window_argb_value = 255,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
