Reduce minimum_height

--- a/Vertical/conky_carelli_Doc.conf
+++ b/Vertical/conky_carelli_Doc.conf
@@ -16,14 +16,14 @@ conky.config = {
 
 -- -- Window specifications -- #
 	own_window = true,
-	own_window_type = 'override',
+	own_window_type = 'panel',
 	own_window_argb_visual = false,
 	own_window_argb_value = 255,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	own_window_transparent = true,
 	own_window_colour = '#000000',
 		minimum_width = 400,
-	minimum_height = 1000,
+	minimum_height = 800,
 
 	border_inner_margin = 10,
 	border_outer_margin = 10,
@@ -65,10 +65,10 @@ ${goto 50}${font Conky Icons by Carelli:size=14}h ${font}${goto 85}${addrs eth1}
 
 ${color #f8df58}${font Conky Icons by Carelli:size=14}ň ${font}DRIVES${color}
 ${goto 50}${font Conky Icons by Carelli:size=14}ǘ ${font}${goto 85}ROOT: ${execi 300 nc localhost 7634 | cut -c31-32 ;} ºC ALAYA: ${execi 300 nc localhost 7634 | cut -c109-110 ;} ºC INDAR: ${execi 300 nc localhost 7634 | cut -c70-71 ;} ºC
-${goto 50}${font Conky Icons by Carelli:size=14}Ǒ ${font}${goto 85}ROOT:${goto 160}${fs_bar 7,75 /}${goto 240}${fs_free_perc /}%
-${if_mounted /media/ktavabi/ALAYA}${font}${goto 85}ALAYA:${goto 160}${fs_bar 7,75 /media/ktavabi/ALAYA}${goto 245}${fs_free_perc /}%$else$endif
-${if_mounted /media/ktavabi/INDAR}${font}${goto 85}INDAR:${goto 160}${fs_bar 7,75 /media/ktavabi/INDAR}${goto 245}${fs_free_perc /}%$else$endif
-${if_mounted /media/ktavabi/SEA2T}${font}${goto 85}SEA2T:${goto 160}${fs_bar 7,75 /media/ktavabi/SEA2T}${goto 245}${fs_free_perc /}%$else$endif
+${goto 50}${font Conky Icons by Carelli:size=14}Ǒ ${font}${goto 85}ROOT:${goto 160}${fs_bar 7,75 /}${goto 250}${fs_free_perc /}%
+${if_mounted /media/ktavabi/ALAYA}${font}${goto 85}ALAYA:${goto 160}${fs_bar 7,75 /media/ktavabi/ALAYA}${goto 250}${fs_free_perc /media/ktavabi/ALAYA}%$else$endif
+${if_mounted /media/ktavabi/INDAR}${font}${goto 85}INDAR:${goto 160}${fs_bar 7,75 /media/ktavabi/INDAR}${goto 250}${fs_free_perc /media/ktavabi/INDAR}%$else$endif
+${if_mounted /media/ktavabi/SEA2T}${font}${goto 85}SEA2T:${goto 160}${fs_bar 7,75 /media/ktavabi/SEA2T}${goto 250}${fs_free_perc /media/ktavabi/SEA2T}%$else$endif
 ${goto 50}${font Conky Icons by Carelli:size=14}N ${font}${goto 85}Reading: ${diskio_read /dev/sda1}${goto 225} Writing: ${diskio_write /dev/sda1}
 ${goto 50}${diskiograph_read /dev/sda1 20,80 2216e1 2216e1}${goto 225}${diskiograph_write /dev/sda1 20,80 DD3A21 DD3A21}
 
