Mod window type

--- a/Vertical/conky_carelli_Doc.conf
+++ b/Vertical/conky_carelli_Doc.conf
@@ -16,13 +16,13 @@ conky.config = {
 
 -- -- Window specifications -- #
 	own_window = true,
-	own_window_type = 'panel',
-	own_window_argb_visual = false,
-	own_window_argb_value = 255,
+	own_window_type = 'normal',
+	own_window_argb_visual = true,
+	own_window_argb_value = 0,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	own_window_transparent = true,
-	own_window_colour = '#000000',
-		minimum_width = 400,
+	own_window_colour = '#000007',
+	minimum_width = 400,
 	minimum_height = 800,
 
 	border_inner_margin = 10,
@@ -38,25 +38,25 @@ conky.config = {
 	draw_graph_borders = false,
 
 	-- Conky on second monitor
-	xinerama_head = 2,
+	xinerama_head = 1,
 
 -- -- Text settings -- #
 -- Icons: ${font Conky Icons by Carelli:size=14}
 	use_xft = true,
-	font = 'Ubuntu Mono:size=12',
+	font = 'Ubuntu Mono:size=10',
 	xftalpha = 0.8,
 	uppercase = false,
-	default_color = '#000000',
---	format_human_readable = true,
+	default_color = '#b2b2c7',
+--format_human_readable = true,
 };
 
 conky.text = [[
-${color #000000}${font Conky Icons by Carelli:size=30}ƃ ${color}${font Conky Icons by Carelli:size=14}ǒ${font}${uptime}${voffset -5.5} ${color #000000}${font Conky Icons by Carelli:size=14}o${color}${font}${time %a %d/%m/%Y %H:%M}
+${color #b2b2c7}${font Conky Icons by Carelli:size=30} ƃ ${color}${font Conky Icons by Carelli:size=14} ǒ${font}${uptime}${voffset -5.5} ${color #b2b2c7}${font Conky Icons by Carelli:size=14} o${color}${font} ${time %a %d/%m/%Y %H:%M}
 
 ${hr 2}
 ${font}${distribution} - ${kernel}
 ${hr 2}
-${color #000000}Los Angeles: ${tztime America/Los_Angeles %H:%M}  ${color #000000}Amsterdam: ${tztime Europe/Amsterdam %H:%M}  ${color #000000}Washington: ${tztime US/Eastern %H:%M}
+${color #b2b2c7}Los Angeles: ${tztime America/Los_Angeles %H:%M}  ${color #b2b2c7}Amsterdam: ${tztime Europe/Amsterdam %H:%M}  ${color #b2b2c7}Washington: ${tztime US/Eastern %H:%M}
 
 ${color #f8df58}${font Conky Icons by Carelli:size=14}E${goto 85}${font}ETH${color}
 ${goto 50}${font Conky Icons by Carelli:size=14}Ƃ ${font}${goto 85}${upspeed eth1}
@@ -77,7 +77,7 @@ ${goto 85}RAM:${goto 128}$memperc%${goto 164}${membar 7,80}
 ${goto 85}SWAP:${goto 128}$swapperc%${goto 164}${swapbar 7,80}
 
 ${color #f8df58}${font Conky Icons by Carelli:size=14}A ${font}CPUS${voffset -5.5}
-${color #000000}
+${color #b2b2c7}
 ${goto 50}${cpu cpu0}%${goto 75}${cpubar 7,80 cpu0}${goto 180}${cpu cpu8}%${goto 205}${cpubar 7,80 cpu4}${goto 310}${cpu cpu16}%${goto 335}${cpubar 7,80 cpu16}
 ${goto 50}${cpu cpu1}%${goto 75}${cpubar 7,80 cpu1}${goto 180}${cpu cpu9}%${goto 205}${cpubar 7,80 cpu5}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu17}
 ${goto 50}${cpu cpu2}%${goto 75}${cpubar 7,80 cpu2}${goto 180}${cpu cpu10}%${goto 205}${cpubar 7,80 cpu10}${goto 310}${cpu cpu15}%${goto 335}${cpubar 7,80 cpu18}
